--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AltoControls" version="1.0.1" targetFramework="net461" />
   <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
-  <package id="CyotekImageBox" version="1.2.1" targetFramework="net461" />
+  <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
@@ -10,16 +10,63 @@
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
+  <package id="ObjectListView.Official" version="2.9.2-alpha2" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.7.1" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.7.1" targetFramework="net461" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="PropertyGridEx" version="1.0.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="1.0.0-alpha2" targetFramework="net461" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="VisualPlus" version="0.4.1.4-beta" targetFramework="net461" />
-  <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net461" />
-  <package id="Vlc.DotNet.Core.Interops" version="2.2.1" targetFramework="net461" />
-  <package id="Vlc.DotNet.Forms" version="2.2.1" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core" version="3.0.0-develop289" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core.Interops" version="3.0.0-develop289" targetFramework="net461" />
+  <package id="Vlc.DotNet.Forms" version="3.0.0-develop289" targetFramework="net461" />
   <package id="WinFormAnimation" version="1.5.6298.3372" targetFramework="net461" />
 </packages>
