--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DCBBE807-CD6E-493E-8C04-DB976A1591EA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolvenKit.Wwise</RootNamespace>
     <AssemblyName>WolvenKit.Wwise</AssemblyName>
@@ -82,6 +82,9 @@
     <Reference Include="format, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\VGMToolbox.1.0.0.1040\lib\format.dll</HintPath>
     </Reference>
+    <Reference Include="INIFileParser, Version=2.5.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
+      <HintPath>..\packages\ini-parser.2.5.2\lib\net20\INIFileParser.dll</HintPath>
+    </Reference>
     <Reference Include="jsutil, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\VGMToolbox.1.0.0.1040\lib\jsutil.dll</HintPath>
     </Reference>
@@ -111,7 +114,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BNK\BNK.cs" />
     <Compile Include="Player\AsioOutPlugin.cs" />
     <Compile Include="Player\AsioOutSettingsPanel.cs">
       <SubType>UserControl</SubType>
@@ -155,14 +157,6 @@
       <DependentUpon>WaveOutSettingsPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BNK\Sections\BKHD.cs" />
-    <Compile Include="BNK\Sections\DATA.cs" />
-    <Compile Include="BNK\Sections\DIDX.cs" />
-    <Compile Include="BNK\Sections\HIRC.cs" />
-    <Compile Include="BNK\Sections\SoundStructure.cs" />
-    <Compile Include="BNK\Sections\STID.cs" />
-    <Compile Include="BNK\Sections\Unknown.cs" />
-    <Compile Include="BNK\SoundFile.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -173,9 +167,15 @@
     <Compile Include="SoundCache\SoundManager.cs" />
     <Compile Include="SoundCache\Sound_Cache.cs" />
     <Compile Include="Test.cs" />
-    <Compile Include="WEM\HeaderMerge.cs" />
-    <Compile Include="WEM\Packet.cs" />
-    <Compile Include="WEM\WemFile.cs" />
+    <Compile Include="Wwise\FileManage.cs" />
+    <Compile Include="Wwise\ManagerObject.cs" />
+    <Compile Include="Wwise\Program.cs" />
+    <Compile Include="Wwise\RandomGen.cs" />
+    <Compile Include="Wwise\SBObject.cs" />
+    <Compile Include="Wwise\Soundbank.cs" />
+    <Compile Include="Wwise\SoundStructure.cs" />
+    <Compile Include="Wwise\WEM.cs" />
+    <Compile Include="Wwise\WemFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
