--- a/WolvenKit.Wwise/packages.config
+++ b/WolvenKit.Wwise/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ini-parser" version="2.5.2" targetFramework="net48" />
   <package id="NAudio" version="1.10.0" targetFramework="net461" />
   <package id="VGMToolbox" version="1.0.0.1040" targetFramework="net461" />
   <package id="WindowsBase" version="4.6.1055.0" targetFramework="net461" />
