--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -5,8 +5,9 @@
   <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net461" />
   <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
   <package id="CommandLineParser" version="2.7.82" targetFramework="net48" />
-  <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
   <package id="CSharpImageLibrary" version="4.2.0" targetFramework="net48" />
+  <package id="CsvHelper" version="15.0.4" targetFramework="net48" />
+  <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
   <package id="DevZH.FlatBuffers" version="1.4.0" targetFramework="net461" />
   <package id="Dfust.Hotkeys" version="1.2.6206.24906" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
@@ -17,6 +18,8 @@
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net48" />
@@ -45,7 +48,7 @@
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
@@ -60,7 +63,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
@@ -75,6 +78,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
@@ -84,5 +88,7 @@
   <package id="Vlc.DotNet.Core" version="3.0.0-develop289" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="3.0.0-develop289" targetFramework="net461" />
   <package id="Vlc.DotNet.Forms" version="3.0.0-develop289" targetFramework="net461" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net48" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
   <package id="WinFormAnimation" version="1.5.6298.3372" targetFramework="net461" />
 </packages>
